--- a/1.Style.CSS
+++ b/1.Style.CSS
@@ -29,6 +29,17 @@
    } */
 
    /* 6. */
-   div p{
+   /* div p{
     color: red;
-   }
+   } */
+
+
+   /* 7. */
+   /* h1+p{
+    color: red;
+   } */
+
+   /* 8. */
+   /* h1~p{
+    color: red;
+   } */
